# ai-learning-subagents

./: .env.example  .gitignore  Makefile  config.py  main.py  output_schemas.py  pyproject.toml  tools.py
agents/: orchestrator.py  research_agent.py  seo_agent.py  writing_agent.py
chains/: fact_check_chain.py  writing_chain.py
data/: competitor_profiles.md  content_calendar.json  market_brief.md  product_facts.md
data/drafts/: 2026-04-27-tutorial-hell-progress.md  2026-05-01-anki-review-queue-burnout.md  2026-05-01-tutorial-hell-progress.md
docs/superpowers/plans/: 2026-04-24-marketing-agents.md  2026-05-01-blog-image-generation.md
docs/superpowers/specs/: 2026-04-24-marketing-agents-design.md  2026-05-01-blog-image-generation-design.md
models/: article.py  research.py  seo.py
prompts/: fact_check.py  loader.py  research.py  seo.py  writing.py
prompts/md/: fact_check.md  research_market_kickoff.md  research_market_synthesis.md  research_setup_kickoff.md  research_synthesis.md  seo_kickoff.md  seo_synthesis.md  writing.md
prompts/md/agents/: research_market_system.md  research_setup_system.md  seo_system.md
prompts/md/chains/: blog_image.md  fact_check.md  research_market_synthesis.md  research_setup_synthesis.md  seo_synthesis.md  writing.md
services/: calendar_service.py  file_service.py  image_service.py  llm.py  publish_service.py
tests/: conftest.py  test_agents.py  test_chains.py  test_config.py  test_image_service.py  test_models.py  test_services.py  test_tools.py
