[project]
name = "ai-learning-subagents"
version = "0.1.0"
description = "Multi-agent marketing system for Draft and Arc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "tavily-python>=0.3",
    "google-search-results>=2.4",
    "pytrends>=4.9",
    "pydantic-settings>=2.0",
    "aiofiles>=24.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "langchain-tavily>=0.2.18",
    "openai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agents", "chains", "models", "prompts", "services", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
